# lotw_auth_server

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose-services.yaml  docker-compose.yaml  nginx.conf  pyproject.toml  requirements-dev.txt  requirements.lock.txt  requirements.txt
app/: main.py
app/core/: config.py  db.py  deps.py  logging.py  redis.py  security.py  templating.py  utils.py
app/core/templates/: yandex_auth.html
app/servers/: models.py  routes.py  schemas.py
app/session_auth/: models.py  routes.py  schemas.py
app/users_auth/: models.py
app/vk_auth/: models.py  routes.py  schemas.py
app/yandex_auth/: models.py  routes.py  schemas.py
migrations/: env.py
migrations/versions/: 0dde5cdd1554_addd_unique.py  25313976250b_add_field.py  32269aa2755c_add_vkusers.py  34cd7b6c533c_new_model.py  5e5d1755077a_session_models.py  76680df9b75d_init.py  bd4140231d89_change_vk_mode_rename_field.py  c86e2c5df9dc_change_fields.py  e709cc430018_add_yandex_user_models.py  eb71bbb160da_create_server_table.py  eb8ee6715918_change_field_type.py  f24b1548f9d9_init.py
