[project]
name = "lotw-auth-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.ruff]
line-length = 88
target-version = "py313"
src = ["app"]
exclude = ["migrations", "__pycache__"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "PL", "C", "Q", "T", "S"]
ignore = ["F841", "E501", "E402", "S106"]

[tool.mypy]
python_version = "3.13"
strict = true
exclude = ["migrations", "tests", "__pycache__"]