[project]
name = ""
version = "0.1.0"
description = ""
readme = ""
requires-python = ">=3.13"
dependencies = []

[tool.ruff]
line-length = 88
target-version = "py313"
src = ["app"]
exclude = ["__pycache__"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "PL", "C", "Q", "T", "S"]
ignore = ["F841", "E501", "E402", "S106", "PLR0915"]